@@ -32,7 +32,7 @@ class QuickBoxLayout
     wxBoxSizer* bsizer;
 public:
     wxPanel* pane;
-    
+
     QuickBoxLayout(wxWindow* component, wxSizer* parent, int orientation=wxHORIZONTAL)
     {
         pane = new wxPanel(component);
@@ -47,163 +47,147 @@ public:
     {
         pane->SetSizer(bsizer);
         bsizer->Layout();
-        //bsizer->SetSizeHints(pane);
     }
 };
 
-    
-bool follow_playback = false;
-bool followPlaybackByDefault()
+enum SettingType
 {
-    return follow_playback;
-}
-    
-int play_during_edit = PLAY_ON_CHANGE;
-int playDuringEditByDefault()
+    SETTING_ENUM,
+    SETTING_BOOL
+};
+
+class Setting
 {
-    return play_during_edit;
-}
-  
-int showLinear = true, showMusical = true;
-int showLinearViewByDefault()
+public:
+    wxChoice* m_combo;
+    wxCheckBox* m_checkbox;
+
+    wxString      m_name;
+    wxString      m_user_name;
+    wxArrayString m_choices;
+    SettingType   m_type;
+    int           m_value;
+
+    Setting(wxString name, wxString user_name, SettingType type, int default_value = 0)
+    {
+        m_name = name;
+        m_user_name = user_name;
+        m_type = type;
+        m_value = default_value;
+    }
+    void addChoice(wxString choice)
+    {
+        m_choices.Add(choice);
+    }
+    void addChoices(wxArrayString choices)
+    {
+        m_choices = choices;
+    }
+
+
+};
+
+std::vector<Setting> g_settings;
+
+
+// ---- define all settings
+void fillSettingsVector()
 {
-    return showLinear;
+    // ---- language
+    Setting languages(wxT("lang"), wxT("Language"), SETTING_ENUM, getDefaultLanguageAriaID() );
+    languages.addChoices( getLanguageList() );
+    g_settings.push_back( languages );
+
+    // ---- play during edit
+    Setting play(wxT("playDuringEdit"), _("Play during edit (default value)"), SETTING_ENUM, 1 );
+    play.addChoice(_("Always"));        // PLAY_ALWAYS = 0,
+    play.addChoice(_("On note change"));// PLAY_ON_CHANGE = 1,
+    play.addChoice(_("Never"));         // PLAY_NEVER = 2
+    g_settings.push_back( play );
+
+    // ---- score view
+    Setting scoreview(wxT("scoreview"), _("Default Score View"), SETTING_ENUM, 0 );
+    scoreview.addChoice(_("Both Musical and Linear"));
+    scoreview.addChoice(_("Musical Only"));
+    scoreview.addChoice(_("Linear Only"));
+    g_settings.push_back( scoreview );
+
+    // ---- follow playback
+    Setting followp(wxT("followPlayback"), _("Follow playback by default"), SETTING_BOOL, 0 );
+    g_settings.push_back( followp );
 }
-int showMusicalViewByDefault()
-{
-    return showMusical;
-}
+
 
 BEGIN_EVENT_TABLE(Preferences, wxDialog)
-
-EVT_CHOICE(1, Preferences::languageSelected)
 EVT_BUTTON(2, Preferences::okClicked)
-EVT_CHOICE(3, Preferences::playSelected)
-EVT_CHECKBOX(4, Preferences::followPlaybackChecked )
-EVT_CHOICE(5, Preferences::scoreViewSelected)
-    
 END_EVENT_TABLE()
 
 Preferences::Preferences(MainFrame* parent) : wxDialog(parent, wxID_ANY,
-                                                       //I18N: - title of the preferences dialog 
+                                                       //I18N: - title of the preferences dialog
                                                        _("Preferences"),
                                                        wxPoint(100,100), wxSize(500,300), wxCAPTION )
 {
-
     Preferences::parent = parent;
 
+    fillSettingsVector();
+
+    // ---- add widgets
     vert_sizer = new wxBoxSizer(wxVERTICAL);
-
-    // language
+    const int settingAmount = g_settings.size();
+    for(int i=0; i<settingAmount; i++)
     {
-    QuickBoxLayout language_box(this, vert_sizer);
-    //I18N: - in the preferences
-    language_box.add(new wxStaticText(language_box.pane , wxID_ANY,  _("Language")));
-    
-    lang_combo = new wxChoice(language_box.pane, 1, wxDefaultPosition, wxDefaultSize, getLanguageList() );
-    language_box.add(lang_combo);
-    }
-
-    // play settings
-    {
-    QuickBoxLayout play_box(this, vert_sizer);
-    //I18N: - in the preferences
-    play_box.add( new wxStaticText(play_box.pane, wxID_ANY,  _("Play during edit (default value)")) );
-
-    //I18N: - in the preferences, for "Play during edit (default value)" (the 3 chocies being "Always", "On note change" and "Never")
-    wxString choices[3] = { _("Always"),  _("On note change"),  _("Never")};
-
-    play_combo = new wxChoice(play_box.pane, 3, wxDefaultPosition, wxDefaultSize, 3, choices );
-    play_box.add( play_combo );
-    }
-    
-    // score view
-    {
-        QuickBoxLayout score_view_box(this, vert_sizer);
-        //I18N: - in the preferences
-        score_view_box.add(new wxStaticText(score_view_box.pane , wxID_ANY,  _("Default Score View")));
-        
-        //I18N: - in the preferences, where we choose default score view
-        wxString choices[3] = { _("Both Musical and Linear"),  _("Musical Only"),  _("Linear Only")};
-        scoreview_combo = new wxChoice(score_view_box.pane, 5, wxDefaultPosition, wxDefaultSize, 3, choices );
-        score_view_box.add(scoreview_combo);
-    }
-    
-    {
-        //I18N: - in the preferences
-        follow_playback_checkbox = new wxCheckBox(this, 4, _("Follow playback by default"), wxDefaultPosition, wxDefaultSize );
-        vert_sizer->Add( follow_playback_checkbox, 0, wxALL, 10 );
-    }
-    
-    // *********** fill values ********
-    
-    lang_combo->Select( getDefaultLanguageID() );
-
-    wxConfig* prefs;
-    prefs = (wxConfig*) wxConfig::Get();
-
-    // --- read settings from existing prefs -----
-    long play_v;
-    if(prefs->Read( wxT("playDuringEdit"), &play_v) )
-    {
-        if(play_v == PLAY_ALWAYS)
+        if( g_settings[i].m_type == SETTING_ENUM )
         {
-            play_combo->Select(0);
-            play_during_edit = PLAY_ALWAYS;
+            QuickBoxLayout box(this, vert_sizer);
+            //I18N: - in preferences window
+            box.add(new wxStaticText(box.pane , wxID_ANY, g_settings[i].m_user_name ));
+
+            g_settings[i].m_combo = new wxChoice(box.pane, 1, wxDefaultPosition, wxDefaultSize,  g_settings[i].m_choices );
+            box.add(g_settings[i].m_combo);
+
+            //g_settings[i].m_combo->Connect( g_settings[i].m_combo->GetId(),
+            //                                wxEVT_COMMAND_CHOICE_SELECTED,
+            //                                wxCommandEventHandler(Preferences::onSettingChanged),
+            //                                NULL, this );
         }
-        else if(play_v == PLAY_ON_CHANGE)
+        else if( g_settings[i].m_type == SETTING_BOOL )
         {
-            play_combo->Select(1);
-            play_during_edit = PLAY_ON_CHANGE;
-        }
-        else if(play_v == PLAY_NEVER)
-        {
-            play_combo->Select(2);
-            play_during_edit = PLAY_NEVER;
+            g_settings[i].m_checkbox = new wxCheckBox(this, wxID_ANY, g_settings[i].m_user_name, wxDefaultPosition, wxDefaultSize );
+            vert_sizer->Add( g_settings[i].m_checkbox, 0, wxALL, 10 );
+
+            //g_settings[i].m_checkbox->Connect(
+            //        g_settings[i].m_combo->GetId(),
+            //        wxEVT_COMMAND_CHECKBOX_CLICKED,
+            //        wxCommandEventHandler(Preferences::onSettingChanged),
+            //        NULL, this );
         }
     }
-    else
+
+
+    // --- read values from file
+    wxConfig* prefs = (wxConfig*) wxConfig::Get();
+    long value;
+    // for each setting
+    for(int i=0; i<settingAmount; i++)
     {
-        play_combo->Select(1);
-    }
-    
-    long followp;
-    if(prefs->Read( wxT("followPlayback"), &followp) )
-    {
-        follow_playback = followp;
-        follow_playback_checkbox->SetValue(follow_playback);
+        // see if this value is defined in file
+        if(prefs->Read( g_settings[i].m_name, &value) )
+        {
+            g_settings[i].m_value = value;
+        }
     }
 
-    long scorev;
-    if(prefs->Read( wxT("scoreview"), &scorev) )
-    {
-        scoreview_combo->SetSelection(scorev);
-        if(scorev == 0)
-        {
-            showLinear = true;
-            showMusical = true;
-        }
-        else if(scorev == 1)
-        {
-            showLinear = false;
-            showMusical = true;
-        }
-        else if(scorev == 2)
-        {
-            showLinear = true;
-            showMusical = false;
-        }
-    }
+    updateWidgetsFromValues();
+
     // -----------------------------------
-
     ok_btn = new wxButton(this, 2, wxT("OK"));
     vert_sizer->Add( ok_btn, 0, wxALL, 10 );
 
     //I18N: - in the preferences dialog
     wxStaticText* effect_label = new wxStaticText(this, wxID_ANY,  _("Changes will take effect next time you open the app."));
     effect_label->SetFont( wxFont(wxNORMAL_FONT->GetPointSize(), wxFONTFAMILY_DEFAULT, wxFONTSTYLE_ITALIC, wxFONTWEIGHT_NORMAL) );
-    vert_sizer->Add( effect_label, 0, wxALL, 10 );    
-    
+    vert_sizer->Add( effect_label, 0, wxALL, 10 );
+
     ok_btn -> SetDefault();
 
     SetSizer( vert_sizer );
@@ -215,41 +199,82 @@ Preferences::~Preferences()
 {
 }
 
+void Preferences::updateWidgetsFromValues()
+{
+    const int settingAmount = g_settings.size();
+
+    // ---- update view to reflect values
+    for(int i=0; i<settingAmount; i++)
+    {
+        if( g_settings[i].m_type == SETTING_ENUM )
+        {
+            g_settings[i].m_combo->Select(g_settings[i].m_value);
+        }
+        else if( g_settings[i].m_type == SETTING_BOOL )
+        {
+            g_settings[i].m_checkbox->SetValue(g_settings[i].m_value);
+        }
+    }
+}
+
 void Preferences::show()
 {
     Center();
     modalCode = ShowModal();
 }
 
-void Preferences::languageSelected(wxCommandEvent& evt)
+void Preferences::updateValuesFromWidgets()
 {
-    setDefaultLanguage( lang_combo->GetStringSelection() );
+    // update all values from widgets
+    const int settingAmount = g_settings.size();
+    for(int i=0; i<settingAmount; i++)
+    {
+        if( g_settings[i].m_type == SETTING_ENUM )
+        {
+            g_settings[i].m_value = g_settings[i].m_combo->GetSelection();
+        }
+        else if( g_settings[i].m_type == SETTING_BOOL )
+        {
+            g_settings[i].m_value = g_settings[i].m_checkbox->GetValue();
+        }
+    }
 }
 
-void Preferences::playSelected(wxCommandEvent& evt)
-{
-    wxConfig* prefs = (wxConfig*) wxConfig::Get();
-    prefs->Write( wxT("playDuringEdit"), play_combo->GetSelection() );
-    prefs->Flush();
-}
 
-void Preferences::followPlaybackChecked(wxCommandEvent& evt)
+void Preferences::saveFromValues()
 {
     wxConfig* prefs = (wxConfig*) wxConfig::Get();
-    prefs->Write( wxT("followPlayback"), follow_playback_checkbox->GetValue() );
-    prefs->Flush();
-}
 
-void Preferences::scoreViewSelected(wxCommandEvent& evt)
-{
-    wxConfig* prefs = (wxConfig*) wxConfig::Get();
-    prefs->Write( wxT("scoreview"), scoreview_combo->GetSelection() );
+    const int settingAmount = g_settings.size();
+    for(int i=0; i<settingAmount; i++)
+    {
+        prefs->Write( g_settings[i].m_name, g_settings[i].m_value );
+    }
+
     prefs->Flush();
 }
 
 void Preferences::okClicked(wxCommandEvent& evt)
 {
+    updateValuesFromWidgets();
+    saveFromValues();
     wxDialog::EndModal(modalCode);
+}
+
+long Preferences::getValue(wxString entryName)
+{
+
+    const int settingAmount = g_settings.size();
+    for(int i=0; i<settingAmount; i++)
+    {
+        if( g_settings[i].m_name == entryName )
+        {
+            std::cout << g_settings[i].m_value << std::endl;
+            return g_settings[i].m_value;
+        }
+    }
+    std::cout << "prefs value not found : " << entryName.mb_str() << std::endl;
+    return -1;
 }
 
 }
